--- a/production/css/globals.css
+++ b/production/css/globals.css
@@ -75,10 +75,6 @@ label {
   &::after {
     height: 0px;
   }
-
-  .top-row-grey {
-    background-color: #fef6ff9c !important;
-  }
 }
 
 svg.clone-icon {
